Src code to browsable html for easy browsing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,19 @@
-# Every folder with the name.
+# Every directory with the name.
 .vs/
-.build-debug/
-.build-release/
-.codelite/
-Debug/
-Release/
 build*/
 
-# Specifc filenames.
+# Specific directories.
+#/Woboq/generated/
+
+# Filenames everywhere.
 compile_flags.txt
 compile_commands.json
 .vscode/settings.json
 .vscode/c_cpp_properties.json
 
-# Specific filetypes to ignore everywhere.
-*.log
-*.tlog
-*.obj
-*.o
-*.FileListAbsolute.txt
-*.cpp.o
-*.cpp.o.d
-#*.a
-*.d
-#*.mk
-*.idb
-*.ilk
-*.exe
-*.suo
-*.db
-*.db-shm
-*.db-wal
-*.exp
-*.ipch
-*.opendb
-*.aps
-*.iobj
-*.ipdb
-*.so
-*.tags
-*.session
-*.c.o
-*.cxx.o
-*.pdb
-*.tac
+# Specific files/directories matching string.
+/Woboq/generated/html
 
-# Specific filetypes that have exceptions in subdirs.
-*.vcxproj.user
-#*.lib
-*.pdb
+# Filetypes everywhere.
+*.ext
 
