--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -1,134 +1,162 @@
-[ OutputFile ../Scripts/compile_commands_generated.json ]
-[ IncludePath Foundation/Inc ]
-[ IncludePath Math/Inc ]
-[ IncludePath System/Inc ]
-[ IncludePath Image/Inc ]
-[ IncludePath Build/Inc ]
-[ IncludePath Scene/Inc ]
+[ OutputFile ./compile_commands_generated.json ]
+[ IncludePath ../Modules/Foundation/Inc ]
+[ IncludePath ../Modules/Image/Inc ]
+[ IncludePath ../Modules/Math/Inc ]
+[ IncludePath ../Modules/Pipeline/Inc ]
+[ IncludePath ../Modules/Scene/Inc ]
+[ IncludePath ../Modules/System/Inc ]
+[ IncludePath ../Modules/Image/Contrib ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/config ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmBase/config ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmBase/Half ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmBase/Iex ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmBase/IlmThread ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmBase/Imath ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/IlmImf ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/config ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/zlib ]
+[ IncludePath ../Contrib/CxImage/Inc ]
 
 ; Foundation Module
-[ SourceFile Foundation/Inc/Foundation/tArray.h ]
-[ SourceFile Foundation/Inc/Foundation/tAssert.h ]
-[ SourceFile Foundation/Inc/Foundation/tBitArray.h ]
-[ SourceFile Foundation/Inc/Foundation/tBitField.h ]
-[ SourceFile Foundation/Inc/Foundation/tFixInt.h ]
-[ SourceFile Foundation/Inc/Foundation/tList.h ]
-[ SourceFile Foundation/Inc/Foundation/tMemory.h ]
-[ SourceFile Foundation/Inc/Foundation/tPlatform.h ]
-[ SourceFile Foundation/Inc/Foundation/tPool.h ]
-[ SourceFile Foundation/Inc/Foundation/tPriorityQueue.h ]
-[ SourceFile Foundation/Inc/Foundation/tRingBuffer.h ]
-[ SourceFile Foundation/Inc/Foundation/tSort.h ]
-[ SourceFile Foundation/Inc/Foundation/tStandard.h ]
-[ SourceFile Foundation/Inc/Foundation/tString.h ]
-[ SourceFile Foundation/Inc/Foundation/tSync.h ]
-[ SourceFile Foundation/Inc/Foundation/tUnits.h ]
-[ SourceFile Foundation/Inc/Foundation/tVersion.h ]
-[ SourceFile Foundation/Src/tAssert.cpp ]
-[ SourceFile Foundation/Src/tBitArray.cpp ]
-[ SourceFile Foundation/Src/tMemory.cpp ]
-[ SourceFile Foundation/Src/tPlatform.cpp ]
-[ SourceFile Foundation/Src/tPool.cpp ]
-[ SourceFile Foundation/Src/tStandard.cpp ]
-[ SourceFile Foundation/Src/tString.cpp ]
-[ SourceFile Foundation/Src/tSync.cpp ]
-[ SourceFile Foundation/Src/tUnits.cpp ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tArray.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tAssert.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tBitArray.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tBitField.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tFixInt.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tList.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tMemory.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tPlatform.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tPool.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tPriorityQueue.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tRingBuffer.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tSort.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tStandard.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tString.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tUnits.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tVersion.cmake.h ]
 
-; Math Module
-[ SourceFile Math/Inc/Math/tColour.h ]
-[ SourceFile Math/Inc/Math/tConstants.h ]
-[ SourceFile Math/Inc/Math/tFundamentals.h ]
-[ SourceFile Math/Inc/Math/tGeometry.h ]
-[ SourceFile Math/Inc/Math/tHash.h ]
-[ SourceFile Math/Inc/Math/tLinearAlgebra.h ]
-[ SourceFile Math/Inc/Math/tMatrix2.h ]
-[ SourceFile Math/Inc/Math/tMatrix4.h ]
-[ SourceFile Math/Inc/Math/tQuaternion.h ]
-[ SourceFile Math/Inc/Math/tRandom.h ]
-[ SourceFile Math/Inc/Math/tSpline.h ]
-[ SourceFile Math/Inc/Math/tVector2.h ]
-[ SourceFile Math/Inc/Math/tVector3.h ]
-[ SourceFile Math/Inc/Math/tVector4.h ]
-[ SourceFile Math/Src/tColour.cpp ]
-[ SourceFile Math/Src/tGeometry.cpp ]
-[ SourceFile Math/Src/tHash.cpp ]
-[ SourceFile Math/Src/tLinearAlgebra.cpp ]
-[ SourceFile Math/Src/tRandom.cpp ]
-[ SourceFile Math/Src/tSpline.cpp ]
-
-; System Module
-[ SourceFile System/Inc/System/tChunk.h ]
-[ SourceFile System/Inc/System/tCommand.h ]
-[ SourceFile System/Inc/System/tFile.h ]
-[ SourceFile System/Inc/System/tPrint.h ]
-[ SourceFile System/Inc/System/tRegex.h ]
-[ SourceFile System/Inc/System/tScript.h ]
-[ SourceFile System/Inc/System/tStream.h ]
-[ SourceFile System/Inc/System/tTask.h ]
-[ SourceFile System/Inc/System/tThrow.h ]
-[ SourceFile System/Inc/System/tTimer.h ]
-[ SourceFile System/Inc/System/tUtil.h ]
-[ SourceFile System/Src/tChunk.cpp ]
-[ SourceFile System/Src/tCommand.cpp ]
-[ SourceFile System/Src/tFile.cpp ]
-[ SourceFile System/Src/tPrint.cpp ]
-[ SourceFile System/Src/tRegex.cpp ]
-[ SourceFile System/Src/tScript.cpp ]
-[ SourceFile System/Src/tTask.cpp ]
-[ SourceFile System/Src/tThrow.cpp ]
-[ SourceFile System/Src/tTimer.cpp ]
-[ SourceFile System/Src/tUtil.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tAssert.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tBitArray.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tMemory.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tPlatform.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tPool.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tStandard.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tString.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tUnits.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tVersion.cpp ]
 
 ; Image Module
-[ SourceFile Image/Inc/Image/tCubemap.h ]
-[ SourceFile Image/Inc/Image/tFileDDS.h ]
-[ SourceFile Image/Inc/Image/tFileTGA.h ]
-[ SourceFile Image/Inc/Image/tLayer.h ]
-[ SourceFile Image/Inc/Image/tPicture.h ]
-[ SourceFile Image/Inc/Image/tPixelFormat.h ]
-[ SourceFile Image/Inc/Image/tTexture.h ]
-[ SourceFile Image/Src/tCubemap.cpp ]
-[ SourceFile Image/Src/tFileDDS.cpp ]
-[ SourceFile Image/Src/tFileTGA.cpp ]
-[ SourceFile Image/Src/tLayer.cpp ]
-[ SourceFile Image/Src/tPicture.cpp ]
-[ SourceFile Image/Src/tPixelFormat.cpp ]
-[ SourceFile Image/Src/tTexture.cpp ]
+[ SourceFile ../Modules/Image/Inc/Image/tCubemap.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageDDS.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageEXR.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageGIF.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageHDR.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageICO.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageJPG.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageTGA.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageWEBP.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tLayer.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tPicture.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tPixelFormat.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tTexture.h ]
 
-; Build Module
-[ SourceFile Build/Inc/Build/tProcess.h ]
-[ SourceFile Build/Inc/Build/tRule.h ]
-[ SourceFile Build/Inc/Build/tSolution.h ]
-[ SourceFile Build/Src/tProcess.cpp ]
-[ SourceFile Build/Src/tRule.cpp ]
-[ SourceFile Build/Src/tSolution.cpp ]
+[ SourceFile ../Modules/Image/Src/tCubemap.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageDDS.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageEXR.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageGIF.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageHDR.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageICO.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageJPG.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageTGA.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageWEBP.cpp ]
+[ SourceFile ../Modules/Image/Src/tLayer.cpp ]
+[ SourceFile ../Modules/Image/Src/tPicture.cpp ]
+[ SourceFile ../Modules/Image/Src/tPixelFormat.cpp ]
+[ SourceFile ../Modules/Image/Src/tTexture.cpp ]
+
+; Math Module
+[ SourceFile ../Modules/Math/Inc/Math/tColour.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tConstants.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tFundamentals.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tGeometry.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tHash.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tLinearAlgebra.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tMatrix2.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tMatrix4.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tQuaternion.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tRandom.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tSpline.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tVector2.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tVector3.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tVector4.h ]
+
+[ SourceFile ../Modules/Math/Src/tColour.cpp ]
+[ SourceFile ../Modules/Math/Src/tGeometry.cpp ]
+[ SourceFile ../Modules/Math/Src/tHash.cpp ]
+[ SourceFile ../Modules/Math/Src/tLinearAlgebra.cpp ]
+[ SourceFile ../Modules/Math/Src/tRandom.cpp ]
+[ SourceFile ../Modules/Math/Src/tSpline.cpp ]
+
+; Pipeline Module
+[ SourceFile ../Modules/Pipeline/Inc/Build/tProcess.h ]
+[ SourceFile ../Modules/Pipeline/Inc/Build/tRule.h ]
+
+[ SourceFile ../Modules/Pipeline/Src/tProcess.cpp ]
+[ SourceFile ../Modules/Pipeline/Src/tRule.cpp ]
 
 ; Scene Module
-[ SourceFile Scene/Inc/Scene/tAttribute.h ]
-[ SourceFile Scene/Inc/Scene/tCamera.h ]
-[ SourceFile Scene/Inc/Scene/tInstance.h ]
-[ SourceFile Scene/Inc/Scene/tLight.h ]
-[ SourceFile Scene/Inc/Scene/tLodGroup.h ]
-[ SourceFile Scene/Inc/Scene/tMaterial.h ]
-[ SourceFile Scene/Inc/Scene/tMesh.h ]
-[ SourceFile Scene/Inc/Scene/tObject.h ]
-[ SourceFile Scene/Inc/Scene/tPath.h ]
-[ SourceFile Scene/Inc/Scene/tPolyModel.h ]
-[ SourceFile Scene/Inc/Scene/tSelection.h ]
-[ SourceFile Scene/Inc/Scene/tSkeleton.h ]
-[ SourceFile Scene/Inc/Scene/tWorld.h ]
-[ SourceFile Scene/Src/tAttribute.cpp ]
-[ SourceFile Scene/Src/tCamera.cpp ]
-[ SourceFile Scene/Src/tInstance.cpp ]
-[ SourceFile Scene/Src/tLight.cpp ]
-[ SourceFile Scene/Src/tLodGroup.cpp ]
-[ SourceFile Scene/Src/tMaterial.cpp ]
-[ SourceFile Scene/Src/tMesh.cpp ]
-[ SourceFile Scene/Src/tObject.cpp ]
-[ SourceFile Scene/Src/tPath.cpp ]
-[ SourceFile Scene/Src/tPolyModel.cpp ]
-[ SourceFile Scene/Src/tSelection.cpp ]
-[ SourceFile Scene/Src/tSkeleton.cpp ]
-[ SourceFile Scene/Src/tWorld.cpp ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tAttribute.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tCamera.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tInstance.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tLight.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tLodGroup.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tMaterial.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tMesh.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tObject.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tPath.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tPolyModel.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tSelection.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tSkeleton.h ]
+[ SourceFile ../Modules/Scene/Inc/Scene/tWorld.h ]
 
-[ CompileCommand "/usr/bin/clang -x c++ -std=c++11 -DNDEBUG -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -g -O0 -fomit-frame-pointer -fvisibility-inlines-hidden -fPIC -Woverloaded-virtual -ffunction-sections -fdata-sections -Wcast-qual -g" ]
+[ SourceFile ../Modules/Scene/Src/tAttribute.cpp ]
+[ SourceFile ../Modules/Scene/Src/tCamera.cpp ]
+[ SourceFile ../Modules/Scene/Src/tInstance.cpp ]
+[ SourceFile ../Modules/Scene/Src/tLight.cpp ]
+[ SourceFile ../Modules/Scene/Src/tLodGroup.cpp ]
+[ SourceFile ../Modules/Scene/Src/tMaterial.cpp ]
+[ SourceFile ../Modules/Scene/Src/tMesh.cpp ]
+[ SourceFile ../Modules/Scene/Src/tObject.cpp ]
+[ SourceFile ../Modules/Scene/Src/tPath.cpp ]
+[ SourceFile ../Modules/Scene/Src/tPolyModel.cpp ]
+[ SourceFile ../Modules/Scene/Src/tSelection.cpp ]
+[ SourceFile ../Modules/Scene/Src/tSkeleton.cpp ]
+[ SourceFile ../Modules/Scene/Src/tWorld.cpp ]
+
+; System Module
+[ SourceFile ../Modules/System/Inc/System/tChunk.h ]
+[ SourceFile ../Modules/System/Inc/System/tCommand.h ]
+[ SourceFile ../Modules/System/Inc/System/tFile.h ]
+[ SourceFile ../Modules/System/Inc/System/tMachine.h ]
+[ SourceFile ../Modules/System/Inc/System/tPrint.h ]
+[ SourceFile ../Modules/System/Inc/System/tRegex.h ]
+[ SourceFile ../Modules/System/Inc/System/tScript.h ]
+[ SourceFile ../Modules/System/Inc/System/tStream.h ]
+[ SourceFile ../Modules/System/Inc/System/tTask.h ]
+[ SourceFile ../Modules/System/Inc/System/tThrow.h ]
+[ SourceFile ../Modules/System/Inc/System/tTime.h ]
+
+[ SourceFile ../Modules/System/Src/tChunk.cpp ]
+[ SourceFile ../Modules/System/Src/tCommand.cpp ]
+[ SourceFile ../Modules/System/Src/tFile.cpp ]
+[ SourceFile ../Modules/System/Src/tMachine.cpp ]
+[ SourceFile ../Modules/System/Src/tPrint.cpp ]
+[ SourceFile ../Modules/System/Src/tRegex.cpp ]
+[ SourceFile ../Modules/System/Src/tScript.cpp ]
+[ SourceFile ../Modules/System/Src/tTask.cpp ]
+[ SourceFile ../Modules/System/Src/tThrow.cpp ]
+[ SourceFile ../Modules/System/Src/tTime.cpp ]
+
+
+[ CompileCommand "/usr/bin/clang -x c++ -std=c++17 -DPLATFORM_LINUX -DCONFIG_RELEASE -DARCHITECTURE_X64 -DNDEBUG -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -g -O0 -fomit-frame-pointer -fvisibility-inlines-hidden -fPIC -Woverloaded-virtual -ffunction-sections -fdata-sections -Wcast-qual -g" ]
