--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -16,6 +16,7 @@
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tBitArray.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tBitField.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tFixInt.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tHash.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tList.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tMemory.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tPlatform.h ]
@@ -30,6 +31,7 @@
 
 [ SourceFile ../Modules/Foundation/Src/tAssert.cpp ]
 [ SourceFile ../Modules/Foundation/Src/tBitArray.cpp ]
+[ SourceFile ../Modules/Foundation/Src/tHash.cpp ]
 [ SourceFile ../Modules/Foundation/Src/tMemory.cpp ]
 [ SourceFile ../Modules/Foundation/Src/tPlatform.cpp ]
 [ SourceFile ../Modules/Foundation/Src/tPool.cpp ]
@@ -72,7 +74,6 @@
 [ SourceFile ../Modules/Math/Inc/Math/tConstants.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tFundamentals.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tGeometry.h ]
-[ SourceFile ../Modules/Math/Inc/Math/tHash.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tLinearAlgebra.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tMatrix2.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tMatrix4.h ]
@@ -85,7 +86,6 @@
 
 [ SourceFile ../Modules/Math/Src/tColour.cpp ]
 [ SourceFile ../Modules/Math/Src/tGeometry.cpp ]
-[ SourceFile ../Modules/Math/Src/tHash.cpp ]
 [ SourceFile ../Modules/Math/Src/tLinearAlgebra.cpp ]
 [ SourceFile ../Modules/Math/Src/tRandom.cpp ]
 [ SourceFile ../Modules/Math/Src/tSpline.cpp ]
