Moved tConstants and tFundamentals into Foundation. Put math functions in correct namespace. I believe tMap is more or less working, but it needs a bit for testing especiallly for any possible memory leak and for rekeying (growing).

--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -27,7 +27,9 @@ add_library(
 	Inc/Foundation/tAssert.h
 	Inc/Foundation/tBitArray.h
 	Inc/Foundation/tBitField.h
+	Inc/Foundation/tConstants.h
 	Inc/Foundation/tFixInt.h
+	Inc/Foundation/tFundamentals.h
 	Inc/Foundation/tHash.h
 	Inc/Foundation/tList.h
 	Inc/Foundation/tMemory.h
