Fixed CMake exports that had absolute paths in them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,15 @@ include("Modules/Foundation/Inc/Foundation/tVersion.cmake.h")
 project(Tacent VERSION "${TACENT_VERSION}" LANGUAGES C CXX)
 message(STATUS "Tacent -- ProjectName ${PROJECT_NAME} ProjectVersion ${PROJECT_VERSION}")
 
+# We want a better default for install prefix. It is bad form to be modifying
+# system files from a cmake build of anything. Really quite surprised someone
+# thinks the cmake defaults are good.
+#message(STATUS "init=${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT}")
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+	set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE PATH "..." FORCE)
+endif()
+message(STATUS "Tacent -- InstallPrefix ${CMAKE_INSTALL_PREFIX}")
+
 # Sub-projects.
 add_subdirectory(Contrib)
 add_subdirectory(Modules)
