--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -51,6 +51,7 @@
 [ SourceFile ../Modules/Image/Inc/Image/tImageHDR.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageICO.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageJPG.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImagePNG.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageTGA.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageWEBP.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tLayer.h ]
@@ -65,6 +66,7 @@
 [ SourceFile ../Modules/Image/Src/tImageHDR.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageICO.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageJPG.cpp ]
+[ SourceFile ../Modules/Image/Src/tImagePNG.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageTGA.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageWEBP.cpp ]
 [ SourceFile ../Modules/Image/Src/tLayer.cpp ]
