Recompiled libpng for windows and updated build instructions. Kept tArray 'append' functionality but made it more inline with capacity representing the number of elements (append is used by tPrintf quite a bit). Added implicit cast operators to tArray. Allow array [] operator to work within current capacity. Fixed tImagePNG so it compiles in windows.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -43,11 +43,13 @@ add_library(
 
 tacent_target_include_directories(${PROJECT_NAME})
 target_include_directories(
-	"${PROJECT_NAME}" PRIVATE
-	${CMAKE_CURRENT_SOURCE_DIR}/Contrib
-	${CMAKE_CURRENT_SOURCE_DIR}/Contrib/ZLib/include
-	${CMAKE_CURRENT_SOURCE_DIR}/Contrib/OpenEXR/include
-	${CMAKE_CURRENT_SOURCE_DIR}/Contrib/OpenEXR/include/OpenEXR
+	"${PROJECT_NAME}"
+	PRIVATE
+		${CMAKE_CURRENT_SOURCE_DIR}/Contrib
+		${CMAKE_CURRENT_SOURCE_DIR}/Contrib/ZLib/include
+		${CMAKE_CURRENT_SOURCE_DIR}/Contrib/OpenEXR/include
+		${CMAKE_CURRENT_SOURCE_DIR}/Contrib/OpenEXR/include/OpenEXR
+		${CMAKE_CURRENT_SOURCE_DIR}/Contrib/LibPNG/include
 )
 
 tacent_target_compile_definitions(${PROJECT_NAME})
@@ -107,12 +109,6 @@ target_link_libraries(
 		$<$<AND:$<CONFIG:Debug>,$<PLATFORM_ID:Windows>>:${CMAKE_CURRENT_SOURCE_DIR}/Contrib/ZLib/lib/zlibstaticd.lib>
 		$<$<AND:$<CONFIG:Release>,$<PLATFORM_ID:Windows>>:${CMAKE_CURRENT_SOURCE_DIR}/Contrib/ZLib/lib/zlibstatic.lib>
 		$<$<PLATFORM_ID:Linux>:${CMAKE_CURRENT_SOURCE_DIR}/Contrib/ZLib/lib/libz.a>
-)
-
-target_include_directories(
-	"${PROJECT_NAME}"
-	PRIVATE
-		$<TARGET_PROPERTY:CxImage,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 tacent_install(${PROJECT_NAME})
