--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -45,6 +45,7 @@
 
 ; Image Module
 [ SourceFile ../Modules/Image/Inc/Image/tCubemap.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageAPNG.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageDDS.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageEXR.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageGIF.h ]
@@ -60,6 +61,7 @@
 [ SourceFile ../Modules/Image/Inc/Image/tTexture.h ]
 
 [ SourceFile ../Modules/Image/Src/tCubemap.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageAPNG.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageDDS.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageEXR.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageGIF.cpp ]
