--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -57,6 +57,7 @@ target_include_directories(
 		$<TARGET_PROPERTY:Foundation,INTERFACE_INCLUDE_DIRECTORIES>
 		$<TARGET_PROPERTY:Math,INTERFACE_INCLUDE_DIRECTORIES>
 		$<TARGET_PROPERTY:System,INTERFACE_INCLUDE_DIRECTORIES>
+		$<TARGET_PROPERTY:Image,INTERFACE_INCLUDE_DIRECTORIES>
 		$<TARGET_PROPERTY:Pipeline,INTERFACE_INCLUDE_DIRECTORIES>
 		$<TARGET_PROPERTY:Scene,INTERFACE_INCLUDE_DIRECTORIES>
 )
