Changed order of filter enum so that first one is valid. Added tResample to Woboq cfg.

--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -58,6 +58,7 @@
 [ SourceFile ../Modules/Image/Inc/Image/tLayer.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tPicture.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tPixelFormat.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tResample.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tTexture.h ]
 
 [ SourceFile ../Modules/Image/Src/tCubemap.cpp ]
@@ -74,6 +75,7 @@
 [ SourceFile ../Modules/Image/Src/tLayer.cpp ]
 [ SourceFile ../Modules/Image/Src/tPicture.cpp ]
 [ SourceFile ../Modules/Image/Src/tPixelFormat.cpp ]
+[ SourceFile ../Modules/Image/Src/tResample.cpp ]
 [ SourceFile ../Modules/Image/Src/tTexture.cpp ]
 
 ; Math Module
