This is a PBC. tFrame is now used for all multi-frame tImageEXT loaders/savers (apng, ico, gif, webp, and exr). tImageWEBP and tPicture are now able to write a simple one-frame webp file. The addition of tFrame simplifies the image loaders as they can share a data structure, and will be necessary to support multi-frame webp saving in the future.

--- a/Modules/Image/CMakeLists.txt
+++ b/Modules/Image/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(
 	Src/tTexture.cpp
 	Src/tResample.cpp
 	Inc/Image/tCubemap.h
+	Inc/Image/tFrame.h
 	Inc/Image/tImageAPNG.h
 	Inc/Image/tImageBMP.h
 	Inc/Image/tImageDDS.h
